[build-system]
requires = [
	"setuptools>=54",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ChemicalDice"
version = "0.5.3"
readme = "Readme.rst"
description = "ChemicalDice: Transforming cheminformatics and bioinformatics with advanced data fusion analysis."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]
optional-dependencies = { docs = [
    "sphinx",
    "sphinx-gallery",
    "sphinx-rtd-theme",	
    "seaborn",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
	"tensorly",
    "torch",
    "tqdm"
] }

[project.scripts]
ChemicalDice = "ChemicalDice.__main__:main"

[tool.setuptools]
py-modules = ['ChemicalDice']

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["ChemicalDice"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
